merged some cases together